@@ -1985,7 +1985,7 @@ begin
 					Pass := sl.Strings[2];
 					Gender := StrToInt(sl.Strings[3]);
 					Mail := sl.Strings[4];
-					Banned := StrToInt(sl.Strings[5]);
+					Banned := StrToBool(sl.Strings[5]);
 					CName[0] := sl.Strings[6];
 					CName[1] := sl.Strings[7];
 					CName[2] := sl.Strings[8];
@@ -2052,7 +2052,7 @@ begin
 					Pass := sl.Strings[2];
 					Gender := StrToInt(sl.Strings[3]);
 					Mail := sl.Strings[4];
-					Banned := 0;
+					Banned := False;
 					CName[0] := (sl.Strings[5]);
 					CName[1] := (sl.Strings[6]);
 					CName[2] := (sl.Strings[7]);
