@@ -72,7 +72,7 @@ begin
 			Socket.SendBuf(buf, 23);
 		end;
 
-		if (APlayer.Banned = 1) then begin
+		if (APlayer.Banned = True) then begin
 			ZeroMemory(@buf[0],23);
 			WFIFOW( 0, $006a);
 			WFIFOB( 2, 4); //Blocked ID, or an ID of a locked account
